@@ -172,7 +172,8 @@ SummaryRate 1
 # transparent background (1 = enabled, 0 = disabled)
 TransparentBg 0
 
-# image scale (percent)
+# image fonts and scale (percent)
+LargeFonts 0
 ImageScale 100
 
 # traffic estimate bar style
