@@ -457,6 +457,10 @@ Show hours with rate instead of transferred amount. 1 = enabled, 0 = disabled.
 Scale output to given percent. Value range: 50..500
 
 .TP
+.B LargeFonts
+Increase the size of used fonts. 1 = enabled, 0 = disabled.
+
+.TP
 .B SummaryRate
 Show rate in summary output if available. 1 = enabled, 0 = disabled.
 
