@@ -6,6 +6,8 @@
    - ./configure output could show invalid install paths with some
      parameter combinations (pull request by Severin Glöckner)
  - New
+   - Add --large / --small options to image output and LargeFonts
+     configuration option for controlling the output font size
    - Add --scale for scaling the image output to a given percent
    - Add bar visualizations for traffic estimations
    - Allow writing image output to a filename starting with -
